@@ -1,0 +1,76 @@
+#!/bin/sh
+
+#
+# Program: RV.config
+#
+# Purpose:
+#
+#   Configuration file for Feature Relationship Vocabulary load
+#
+# Usage:
+#
+#   Execute this file from a script or command line to
+#   set environment variables for RV  load
+#
+# History:
+#
+#       04/16/2010      sc
+#       - new
+#
+
+cd `dirname $0` 
+
+RUNTIME_DIR="/data/loads/scrum-bob/mgi/vocload/runTimeRV"
+ARCHIVE_DIR="/data/loads/scrum-bob/mgi/vocload/archiveRV"
+
+export RUNTIME_DIR
+export ARCHIVE_DIR
+
+OBO_FILE="/data/loads/scrum-bob/mgi/rvload/input/RelationshipVocab.obo"
+OBO_FILE_VERSION="1.2"
+export OBO_FILE
+export OBO_FILE_VERSION
+
+# This variable will let the loadTerm module know that it should expect to
+# find a synonym type column in the Termfile.
+#
+USE_SYNONYM_TYPE=1
+export USE_SYNONYM_TYPE
+
+RCD_FILE="RV.rcd"
+#MAINTAINER="mgiadmin, hdene@informatics.jax.org, rmb@informatics.jax.org"
+MAINTAINER="sc"
+
+export RCD_FILE
+export MAINTAINER
+
+# vocabulary attributes:
+
+VOCAB_NAME="Feature Relationship"    # name of vocabulary (VOC_Vocab.name) 
+VOCAB_COMMENT_KEY=1001               # note type - private vocab term comment
+ACC_PREFIX="RV"			     # acc ID prefix
+
+JNUM=J:205981		#_Refs_key=207078
+
+IS_SIMPLE=0		# structured vocabulary; should have a .rcd file
+IS_PRIVATE=1		# acc IDs are NOT public
+LOGICALDB_KEY=171	# ACC_LogicalDB._LogicalDB_key
+ANNOT_TYPE_KEY=0        # VOC_AnnotType._AnnotType_key;don't report annotations
+                        # newly obsoleted terms; there won't be any anyway
+DAG_ROOT_ID="RV:0000000"
+
+export VOCAB_NAME
+export VOCAB_COMMENT_KEY
+export ACC_PREFIX
+export JNUM
+export IS_SIMPLE
+export IS_PRIVATE
+export LOGICALDB_KEY
+export ANNOT_TYPE_KEY
+export DAG_ROOT_ID
+
+TERM_FILE="${RUNTIME_DIR}/Termfile"
+DEFS_FILE="${RUNTIME_DIR}/RV.defs"
+
+export TERM_FILE
+export DEFS_FILE
